fix: disable horizontal scroll on lap display

--- a/site.css
+++ b/site.css
@@ -92,7 +92,8 @@ div.circular {
 #lap-display {
   width: 100%;
   height: 200px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   justify-content: flex-start;
 }
 
